made some improvements